--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			}
 		
 			* {
-				color: rgba( 255, 255, 255, 0.8 );
+				color: rgba( 0, 0, 3 );
 				font-size: 20px;
 				
 				font-family: Oskaras;
@@ -39,7 +39,7 @@
 				width: 100%;
 				height: 100%;
 				
-				background-color: rgb( 0, 0, 3 );
+				background-color: rgb( 255, 255, 255, 0.8 );
 			}
 			
 			.Oskaras {
