--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				top: 0;
 				left: 0;
 				
-				background-color: rgb( 0, 0, 3 );
+				background-color: rgb( 255, 255, 255, 0.8 );
 				
 				pointer-events: none;
 			}
@@ -157,9 +157,9 @@
 			}
 			
 .myButton {
-	border: 1px solid rgb( 255, 255, 255 );
+	border: 1px solid rgb( 0, 0, 3 );
 	display:inline-block;
-	color:#ffffff;
+	color:#000000;
 	letter-spacing: 15px;
 	font-size: 17px;
 	padding:10px 30px;
