--- a/JOB_1.html
+++ b/JOB_1.html
@@ -4,7 +4,7 @@
 	
 		<title>oskaraspa.com | FAIRBOURNE</title>
 	
-		<link rel="shortcut icon" type="image/png" href="https://www.part.lt/img/dbd90cdd4a8b7daed48ffdb2c8f181ea41.png/>
+		<link rel="shortcut icon" type="image/png" href="ICO_Favicon.png/>
 	
 		<style>
 		
