--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				</div>
 				
 				<div class="FIRST">
-					<img onclick="location.href='./index.php';" src="./IMG/IMG_1.png" />
+					<img onclick="location.href='./index.html';" src="./IMG/IMG_1.png" />
 					
 					<div class="SECOND">
 						<p class="myButton">UCA IMAGERY</p>
