--- a/JOB_1.html
+++ b/JOB_1.html
@@ -4,7 +4,7 @@
 	
 		<title>oskaraspa.com | FAIRBOURNE</title>
 	
-		<link rel="shortcut icon" type="image/png" href="ICO_Favicon.png/>
+		<link rel="shortcut icon" type="image/png" href="./ICO_Favicon.png"/>
 	
 		<style>
 		
